# gesture-ease-rs

./: Cargo.toml  config.toml
src/: camera.rs  error.rs  gesture_recognition.rs  head_detection.rs  hpe.rs  lib.rs  main.rs  math.rs  traits.rs
src/config/: camera.rs  devices.rs  mod.rs
src/models/: gesture_recognition.rs  head_detection.rs  hpe.rs
